unpackaged/main/default/objects/Updates_On_Closed_Won__e/Updates_On_Closed_Won__e.object-meta.xml
<CustomObject>
    <description>Event used to update the account and oppty on closed won of the opportunity</description>
    <label>Updates On Closed Won</label>
    <pluralLabel>Updates On Closed Won</pluralLabel>
</CustomObject>