unpackaged/main/default/objects/Updates_On_Closed_Won__e/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <description>Used to store the account id of the closed opportunity</description>
    <label>Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>