unpackaged/main/default/objects/Updates_On_Closed_Won__e/fields/Is_Self_Serve__c.field-meta.xml
<CustomField>
    <fullName>Is_Self_Serve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Self Serve</label>
    <type>Checkbox</type>
</CustomField>