unpackaged/main/default/objects/Updates_On_Closed_Won__e/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <description>Store the related opp Id</description>
    <label>Opportunity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>